--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,3 +13,5 @@ jobs:
       run: |
         echo start
         docker build ./docker/main --tag gha:latest
+        docker build -t gha:latest -f docker/Dockerfile .
+
